css/photographers.css
@font-face {
  font-display: swap;
  font-family: 'Poiret One';
  font-style: normal;
  font-weight: 400;
  src: url('../assets/fonts/poiret-one-v17-latin-regular.woff2') format('woff2');
}
@font-face {
  font-display: swap;
  font-family: 'Poppins';
  font-style: normal;
  font-weight: 300;
  src: url('../assets/fonts/poppins-v23-latin-300.woff2') format('woff2');
}
@font-face {
  font-display: swap;
  font-family: 'Poppins';
  font-style: normal;
  font-weight: 400;
  src: url('../assets/fonts/poppins-v23-latin-regular.woff2') format('woff2');
}
@font-face {
  font-display: swap;
  font-family: 'Poppins';
  font-style: normal;
  font-weight: 500;
  src: url('../assets/fonts/poppins-v23-latin-500.woff2') format('woff2');
}
@font-face {
  font-display: swap;
  font-family: 'Poppins';
  font-style: normal;
  font-weight: 600;
  src: url('../assets/fonts/poppins-v23-latin-600.woff2') format('woff2');
}

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}
:root {
    --clr-blk: #1c1c1c;
    --clr-white: #fff;
    --clr-offWhite: #f8f8f8;
    --clr-lightGrey: #b7b6b6;
    --clr-grey: #c4c4c4;
    --clr-darkGrey: #313030;
    --clr-lightBrown: #a68e8e;
}
::-webkit-scrollbar {
    width: 8px;
}
::-webkit-scrollbar-track {
    background-color: var(--clr-white);
}
::-webkit-scrollbar-thumb {
    border-radius: 5px;
    background-color: var(--clr-lightBrown);
}
body {
    width: 100%;
    height: 100vh;
    background-color: var(--clr-offWhite);
    color: var(--clr-blk);
    cursor: default;
}
.mobile-header {
    display: none;
}
.links {
    position: relative;
}
.links ul {
    display: flex;
    justify-content: flex-end;
    margin-right: 1rem;
}
.links ul li {
    display: inline-block;
    font-size: clamp(.95rem, 3vw, 1rem);
    font-family: 'Poiret One', sans-serif;
    font-weight: 600;
    text-transform: capitalize;
    list-style: none;
    padding: 1rem;
}
.links ul li a {
    position: relative;
    color: var(--clr-darkGrey);
    text-decoration: none;
    letter-spacing: 2px;
    -webkit-tap-highlight-color: transparent;
}
.links ul li a::before {
    content: '';
    position: absolute;
    bottom: -5px;
    left: 50%;
    width: 0;
    height: .5px;
    background-color: var(--clr-darkGrey);
    transition: width 350ms ease, left 350ms ease;
}
.links ul li a:hover::before {
    width: 100%;
    left: 0;
}
.hamburger-menu {
    display: none;
    align-items: center;
    justify-content: center;
    position: absolute;
    top: 1rem;
    right: 1.75rem;
    height: 2rem;
    width: 1.25rem;
    background-color: transparent;
    cursor: pointer;
    -webkit-tap-highlight-color: transparent;
    border: none;
    z-index: 3;
}
.bars {
    position: relative;
    height: 3px;
    width: 100%;
    border-radius: 5px;
    background-color: transparent;
}
.bars::before,
.bars::after {
    content: '';
    position: absolute;
    height: 70%;
    width: 100%;
    border-radius: 5px;
    background-color: var(--clr-white);
    transition: transform 350ms ease;
}
.bars::before {
    transform: translateY(-4px);
}
.bars::after {
    transform: translateY(4px);
}
nav.active .hamburger-menu .bars::before {
    transform: translateY(0) rotate(45deg);
}
nav.active .hamburger-menu .bars::after {
    transform: translateY(0) rotate(-45deg);
}
.wrapper {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    max-width: 90rem;
    margin: 125px auto;
}
.card {
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    align-items: center;
    background: var(--clr-white);
    border-radius: 5px;
    width: 250px;
    height: 300px;
    margin: 0 auto;
    font-family: 'Poppins', sans-serif;
    overflow: visible;
    transition: transform 250ms ease;
    cursor: pointer;
}
.card .more-info {
    position: absolute;
    bottom: 1rem;
    opacity: 1;
    text-align: center;
    transition: opacity 250ms ease;
}
.card .more-info h2 {
    text-transform: uppercase;
    letter-spacing: 2px;
}
.card .more-info h2:nth-child(1) {
    font-weight: 300;
    font-size: clamp(.9rem, 3vw, 1rem);
}
.card .more-info h2:nth-child(2) {
    font-weight: 300;
    font-size: .8rem;
}
.card.active .more-info {
    opacity: 0;
    transition: opacity 250ms ease;
}
.card .more-info .chevron {
    color: var(--clr-lightGrey);
    margin: .35rem auto;
}
.card .img-container {
    position: absolute;
    top: 20px;
    width: 200px;
    height: 150px;
    border-radius: 5px;
    overflow: hidden;
    transition: transform 250ms ease-in-out;
    z-index: 1;
}
.card.active .img-container {
    transform: translate3d(0, -5.5rem, 0);
}
.card .img-container img {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 5px;
    font-family: 'Poppins', sans-serif;
}
.card .content {
    width: 100%;
    padding: .75rem;
    opacity: 0;
    transition: opacity 250ms ease;
}
.card.active .content {
    opacity: 1;
}
.card .content p {
    font-size: clamp(.95rem, 3vw, 1rem);
    line-height: 1.7;
    font-weight: 300;
}
footer {
    position: absolute;
    top: 100%;
    background: var(--clr-darkGrey);
    color: var(--clr-offWhite);
    font-family: 'Poppins', sans-serif;
    padding: 1.75rem 2.5rem;
}
footer .grid-container {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 5rem;
    align-content: center;
    justify-content: center;
}
footer h2 {
    font-family: 'Poppins', sans-serif;
    font-size: clamp(.8rem, 3vw, .9rem);
    font-weight: 600;
    letter-spacing: .5px;
    line-height: 2;
    text-transform: uppercase;
}
footer .about p {
    font-size: clamp(.8rem, 3vw, .85rem);
    font-weight: 300;
    letter-spacing: .25px;
    line-height: 1.6;
    margin-top: .5rem;
    width: 22rem;
}
footer .about ul {
    display: flex;
    margin-top: 1rem;
}
footer ul li {
    list-style: none;
}
footer .about ul li svg {
    width: 1.1rem;
    height: auto;
    margin-right: 2rem;
}
footer .quick-links ul li {
    text-transform: capitalize;
    margin-top: .5rem;
    font-weight: 300;
    letter-spacing: .5px;
    font-size: clamp(.85rem, 3vw, .9rem);
}
@media screen and (max-width: 1195px) {
    .no-scroll {
        position: fixed;
        overflow-y: hidden;
    }
    .mobile-header {
        display: flex;
        align-items: center;
        justify-content: flex-start;
        font-family: 'Poiret One', sans-serif;
        background: var(--clr-darkGrey);
        margin: 0 auto;
        padding: .75rem;
    }
    .mobile-header img {
        width: 30px;
        height: auto;
        margin-bottom: 0;
    }
    .mobile-header h1 {
        position: relative;
        left: .75rem;
        font-weight: 500;
        font-size: clamp(1.65rem, 3vw, 1.75rem);
    }
    .mobile-header a {
        color: var(--clr-white);
        text-decoration: none;
    }
    nav.active .links {
        transform: translate(0);
        visibility: visible;
        transition: transform 350ms ease, visibility 0s;
    }
    .links {
        display: flex;
        align-items: center;
        justify-content: center;
        top: 0;
        right: 0;
        position: fixed;
        height: 100%;
        width: 100%;
        background-color: var(--clr-white);
        transform: translateX(100%);
        transition: transform 350ms ease, visibility 0s linear 350ms;
        overflow-y: auto;
        z-index: 1;
        visibility: hidden;
    }
    .links ul {
        position: relative;
        flex-direction: column;
        right: 0;
    }
    .links ul li {
        padding: 1.75rem;
    }
    .links ul li a {
        color: var(--clr-blk);
    }
    .links ul li a::before {
        content: none;
    }
    nav.active .bars::before,
    nav.active .bars::after {
        background-color: var(--clr-blk);
    }
    .hamburger-menu {
        display: flex;
    }
    .wrapper {
        grid-template-columns: repeat(2, 1fr);
        max-width: 600px;
        gap: 7rem;
    }
    footer {
        position: relative;
        top: 0;
    }
    footer .grid-container {
        grid-template-columns: repeat(2, 1fr);
        gap: 2rem;
    }
}
@media screen and (max-width: 990px) {
    footer {
        padding: 1rem 1.5rem;
    }
    footer .about p {
        width: 95%;
    }
}
@media screen and (max-width: 725px) {
    .wrapper {
        grid-template-columns: 1fr;
        gap: 7rem;
    }
    footer .grid-container {
        grid-template-columns: 1fr;
        gap: 3rem 10rem;
    }
}
@media screen and (max-width: 300px) {
    .mobile-header h1 {
        left: .5rem;
    }
}
@media screen and (orientation: landscape) and (max-width: 935px) {
    .links ul li {
        padding: 1.1rem;
    }
}
@media screen and (prefers-color-scheme: dark) and (max-width: 1195px) {
    .links {
        background-color: var(--clr-blk);
    }
    .links ul li a {
        color: var(--clr-grey);
    }
}
@media screen and (prefers-color-scheme: dark) {
    ::-webkit-scrollbar-track {
        background-color: var(--clr-blk);
    }
    ::-webkit-scrollbar-thumb {
        background-color: var(--clr-grey);
    }
    body {
        color: var(--clr-grey);
        background-color: var(--clr-blk);
    }
    .mobile-header a {
        color: var(--clr-offWhite);
    }
    .links ul li a {
        color: var(--clr-grey);
    }
    .links ul li a::before {
        background-color: var(--clr-grey);
    }
    .bars::before,
    .bars::after {
        background-color: var(--clr-grey);
    }
    nav.active .hamburger-menu .bars::before,
    nav.active .hamburger-menu .bars::after {
        background-color: var(--clr-grey);
    }
    .card {
        background: var(--clr-darkGrey);
    }
    .card .img-container img {
        color: var(--clr-offWhite);
    }
    .card .more-info .chevron {
        color: var(--clr-grey);
    }
}

